<resources>
    <string name="app_name">MadMax</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="coffee">Coffee</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email_phone">Email/Phone number</string>
    <string name="remember_me">Remember me</string>
    <string name="login_with">Or Login with</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="offee">offee</string>
    <string name="c">C</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="twitter">Twitter</string>
    <string name="pswd">*******</string>
    <string name="yourmail_gmail_com">yourmail@gmail.com</string>
    <string name="dotcom">Dotcom</string>
    <string name="dotcom_app_login">Dotcom App Login</string>
    <string name="generic_app_login">Generic App Login</string>
    <string name="coffee_app_login">Coffee App Login</string>
    <string name="choose_a_page_to_view">Choose a Page to View</string>
    <string name="otcom">otcom</string>
    <string name="d">D</string>
    <string name="login_to_account">Login to Account</string>
    <string name="email_address">Email Address</string>
    <string name="login_account">Login Account</string>
    <string name="hello">Hello</string>
    <string name="phone_number">Phone Number</string>
    <string name="_912345678">912345678</string>
    <string name="security_question">Security Question</string>
    <string name="your_answer">Your Response...</string>
    <string name="back_to_login">Back to Login</string>
    <string name="create_account">Create Account</string>
    <string name="birthday">Birthday</string>
    <string name="secure_account">Secure Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_detailsText">Please enter required details to create a free account.</string>
    <string name="create_free_account">Create Free Account</string>
    <string name="join_us">Join Us</string>
    <string name="personal_info">Personal Info</string>
    <string name="enter_valid_information">Please enter valid information</string>
    <string name="answer_the_security_questions">Please answer the following security questions correctly and accurately.</string>
    <string name="login_yellow">Login Yellow</string>
    <string name="register_yellow">Register Yellow</string>
    <string name="your_name">Your Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="username">Username</string>
    <string name="example1234">example1234</string>
    <string name="save_and_continue"><![CDATA[Save & Continue]]></string>
    <string name="show_password">Show Password</string>
</resources>