<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    android:padding="24dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:textColor="#333333"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="2dp"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:layout_marginTop="48dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext_green"
        android:hint="@string/yourmail_gmail_com"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#999999" />

    <RelativeLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext_green"
            android:hint="@string/pswd"
            android:inputType="textPassword"
            android:paddingEnd="48dp"
            android:padding="16dp"
            android:textColorHint="#999999" />

        <ImageView
            android:id="@+id/passwordToggle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/eye_off"
            android:contentDescription="@string/show_password"
            android:clickable="true"
            android:focusable="true" />
    </RelativeLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordContainer"
        android:layout_marginTop="32dp"
        android:backgroundTint="#04CFAE"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password" />

    <TextView
        android:id="@+id/orLoginWithText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login_with"
        android:textColor="#777777" />

    <LinearLayout
        android:id="@+id/socialMediaIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orLoginWithText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/facebookButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="26dp"
            android:background="@color/white"
            android:contentDescription="@string/facebook"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook_log" />

        <ImageButton
            android:id="@+id/twitterButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="26dp"
            android:background="@color/white"
            android:contentDescription="@string/twitter"
            android:scaleType="fitCenter"
            android:src="@drawable/twitter_log" />

        <ImageButton
            android:id="@+id/instagramButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="26dp"
            android:background="@drawable/instagram_gradient"
            android:contentDescription="@string/instagram"
            android:scaleType="fitCenter"
            android:src="@drawable/instagram" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/socialMediaIcons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/don_t_have_accountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textColor="#777777" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup"
            android:textColor="#04CFAE" />
    </LinearLayout>
</RelativeLayout>