<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/coffee1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="80sp"
            android:textColor="#C64756"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offee"
            android:textColor="#C64756"
            android:layout_marginTop="-21dp"
            android:layout_marginStart="-15dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/welcome_back"
                android:textColor="#C64756"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coffee1" />

            <EditText
                android:id="@+id/emailPhoneInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="emailAddress|phone"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email_phone"
                android:inputType="phone|textEmailAddress"
                android:padding="16dp"
                android:textColorHint="#999999"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeText" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="#999999"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailPhoneInput" />

            <CheckBox
                android:id="@+id/rememberMeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remember_me"
                android:textColor="#C64756"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordInput" />

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#C64756"
                app:layout_constraintBaseline_toBaselineOf="@id/rememberMeCheckbox"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="#C64756"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rememberMeCheckbox" />

            <TextView
                android:id="@+id/orLoginWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login_with"
                android:textColor="#777777"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <LinearLayout
        android:id="@+id/socialMediaIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orLoginWithText">

            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/facebook_back"
                android:contentDescription="@string/facebook"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook" />

            <ImageButton
                android:id="@+id/instagramButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/instagram_gradient"
                android:contentDescription="@string/instagram"
                android:scaleType="fitCenter"
                android:src="@drawable/instagram" />

            <ImageButton
                android:id="@+id/linkedinButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/linkedin"
                android:scaleType="fitCenter"
                android:src="@drawable/linkedin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/socialMediaIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/don_t_have_accountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/don_t_have_account"
            android:textColor="#777777" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="4dp"
            android:text="@string/signup"
            android:textColor="#C64756" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>